<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/purple_200"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:onClick="backSecondActivity"
                app:srcCompat="?attr/homeAsUpIndicator" />
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/textH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:text="@string/place_job"
            android:textSize="@dimen/textSize_h2"
            />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:text="@string/org_name" />

        <EditText
            android:id="@+id/txJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/margin_left" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:text="@string/post_name" />

        <EditText
            android:id="@+id/txFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/margin_left" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:layout_marginVertical="@dimen/margin_top"
            android:text="@string/begin_job" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_add"
            android:textSize="@dimen/textSize_h2"
            android:layout_marginVertical="@dimen/margin_top"
            android:onClick="onclick"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:layout_marginVertical="@dimen/margin_top"
            android:text="@string/end_job" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_add"
            android:textSize="@dimen/textSize_h2"
            android:layout_marginVertical="@dimen/margin_top"
            android:onClick="onclick"
            />

     <!--   <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_left"
            android:text="@string/plus_job" />

        <ImageButton
            android:id="@+id/imageButtonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_end_color"
            android:onClick="addJob"
            android:layout_marginTop="@dimen/margin_top"
            app:srcCompat="@android:drawable/ic_menu_add"
            tools:srcCompat="@android:drawable/ic_input_add" />-->
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:text="aaa"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_but"
        android:background="@color/purple_200"
        android:onClick="nextFinallyActivity"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>